Documentation and format

--- a/src/00_Node_cluster.ipynb
+++ b/src/00_Node_cluster.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,6 +216,12 @@
     "\n",
     "    ##### Generate random polygon\n",
     "    def create_polygon(self,  from_points_num=20):\n",
+    "        \"\"\"\n",
+    "        Generate a random polygon for the cluster\n",
+    "        \n",
+    "        :param from_points_num: The number of points to \n",
+    "        generate the cluster from \n",
+    "        \"\"\"\n",
     "        polygon = poligon_non_convex_random_gen(from_points_num)\n",
     "        while type(polygon) == shapely.geometry.MultiPolygon:\n",
     "            polygon = poligon_non_convex_random_gen(\n",
@@ -226,8 +232,11 @@
     "    def get_random_points(self, n_points, random_state= 150):\n",
     "        \"\"\"\n",
     "        Returns random points inside the cluster polygon\n",
+    "        \n",
     "        :param n_points Number of point to be generated\n",
+    "        \n",
     "        :param random_state Random state\n",
+    "        \n",
     "        :returns: A list with points\n",
     "        \"\"\"\n",
     "        random.seed(random_state)\n",
@@ -247,8 +256,11 @@
     "    def create_random_points(self, npoints_polygon=1000, random_state = 120):\n",
     "        \"\"\"\n",
     "        Create random points \n",
+    "        \n",
     "        :param npoints_polygon Number of point to get\n",
+    "        \n",
     "        :random_state Random state integer to ste random\n",
+    "        \n",
     "        :returns: A shapely multyPoint clas witn npoints_polygon points\n",
     "        \n",
     "        \"\"\"\n",
@@ -278,9 +290,13 @@
     "    def scale(self,x_scale, y_scale, center_scale= 'center'):\n",
     "        \"\"\"\n",
     "        Scale the points in the cluster \n",
+    "        \n",
     "        :param x_scale Scale factor to scale in x axis\n",
+    "        \n",
     "        :param y_scale Scale factor to scale in y axis\n",
+    "        \n",
     "        :param center_scale Scale center point  (Default = 'center')\n",
+    "        \n",
     "        :returns: No returns\n",
     "        \"\"\"\n",
     "        if self.point_cluster_noise is not None:\n",
@@ -302,9 +318,9 @@
     "    \n",
     "    def get_density(self):\n",
     "        \"\"\"\n",
-    "        Get the density if the cluster \n",
-    "        Number of point in the cluster/Area of the polygon cluster\n",
-    "        :returns the density of the node\n",
+    "        Get the density of the cluster \n",
+    "        \n",
+    "        :returns double: The density of the node\n",
     "        \"\"\"\n",
     "        if self.density is not None:\n",
     "            return self.density\n",
@@ -330,7 +346,8 @@
     "    \n",
     "    def get_center(self):\n",
     "        \"\"\"\n",
-    "        returns the center of the bounding box poligon\n",
+    "        Get the center of the bounding box poligon\n",
+    "        \n",
     "        :returns: Shapely Point center \n",
     "        \"\"\"\n",
     "        if self.center is not None:\n",
@@ -370,7 +387,9 @@
     "        return  all_points\n",
     "    \n",
     "    def get_point_decendent(self):\n",
-    "        \"\"\"returns all the point of the node and its decendents\n",
+    "        \"\"\"\n",
+    "        Returns all the point of the node and its decendents\n",
+    "        \n",
     "        \"\"\"\n",
     "        all_p  = []\n",
     "        all_p= all_p+ [i for i in self.get_points()]\n",
@@ -703,6 +722,9 @@
     "        El nodo que se pasa como parametro debe ser el padre del poligono que se pide\n",
     "        y el poligon estara contenido dentro del pologon del nodo que esta como parametro\n",
     "        \n",
+    "        random_state\n",
+    "        \n",
+    "        from_points_num\n",
     "        \"\"\"\n",
     "        random_state=kwargs.get('random_state', 123456)\n",
     "        from_points_num= kwargs.get('from_points_num', 20)\n",
@@ -799,6 +821,137 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## create polygon\n",
+    "Create a random polygon of the cluster node"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"cluster_node.create_polygon\" class=\"doc_header\"><code>cluster_node.create_polygon</code><a href=\"__main__.py#L116\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>cluster_node.create_polygon</code>(**`from_points_num`**=*`20`*)\n",
+       "\n",
+       "Generate a random polygon for the cluster\n",
+       "\n",
+       ":param from_points_num: The number of points to \n",
+       "generate the cluster from "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(cluster_node.create_polygon)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Random points\n",
+    "Generate random points inside cluster"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"cluster_node.create_random_points\" class=\"doc_header\"><code>cluster_node.create_random_points</code><a href=\"__main__.py#L153\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>cluster_node.create_random_points</code>(**`npoints_polygon`**=*`1000`*, **`random_state`**=*`120`*)\n",
+       "\n",
+       "Create random points \n",
+       "\n",
+       ":param npoints_polygon Number of point to get\n",
+       "\n",
+       ":random_state Random state integer to ste random\n",
+       "\n",
+       ":returns: A shapely multyPoint clas witn npoints_polygon points"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(cluster_node.create_random_points)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### scale\n",
+    "Scale the points inside the cluster"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_doc(cluster_node.scale)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Get density\n",
+    "\n",
+    "Number of point in the cluster/Area of the polygon cluster"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"cluster_node.get_density\" class=\"doc_header\"><code>cluster_node.get_density</code><a href=\"__main__.py#L204\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>cluster_node.get_density</code>()\n",
+       "\n",
+       "Get the density of the cluster \n",
+       "\n",
+       ":returns double: The density of the node"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(cluster_node.get_density)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -833,11 +986,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Helper functions\n",
     "> Functions to help build the nodes "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## inside_polygon\n",
+    "Check if a min percentage of point are inside a polygon"
    ]
   },
   {
@@ -876,7 +1044,7 @@
    "metadata": {},
    "source": [
     "## poligon_non_convex_from_Points\n",
-    "> Function create a polygon from a list of points"
+    "Function create a polygon from a list of points"
    ]
   },
   {
@@ -914,7 +1082,7 @@
    "metadata": {},
    "source": [
     "## poligon_non_convex_random_gen\n",
-    "> Creates a poligon from a random number of points "
+    "Creates a poligon from a random number of points "
    ]
   },
   {
