Remove cluster basic from ducumentation

--- a/src/00_Node_cluster.ipynb
+++ b/src/00_Node_cluster.ipynb
@@ -48,19 +48,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## cluster\n",
-    "> A basic cluster definition "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#hide\n",
     "#export \n",
     "class cluster(object):\n",
     "    \"\"\"\n",
@@ -91,12 +84,12 @@
    "metadata": {},
    "source": [
     "## cluster_node \n",
-    "> The class has all the methods for the cluster_node class"
+    "> The class has all the methods to create and visualize a cluster "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +791,7 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.cluster_node at 0x7f5976a8b0d0>"
+       "<__main__.cluster_node at 0x7ff00a528f50>"
       ]
      },
      "execution_count": 7,
@@ -824,13 +817,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## create polygon\n",
+    "#### create polygon\n",
     "Create a random polygon of the cluster node"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -867,13 +860,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"cluster_node.create_random_points\" class=\"doc_header\"><code>cluster_node.create_random_points</code><a href=\"__main__.py#L153\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"cluster_node.create_random_points\" class=\"doc_header\"><code>cluster_node.create_random_points</code><a href=\"__main__.py#L154\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>cluster_node.create_random_points</code>(**`npoints_polygon`**=*`1000`*, **`random_state`**=*`120`*)\n",
        "\n",
@@ -907,9 +900,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"cluster_node.scale\" class=\"doc_header\"><code>cluster_node.scale</code><a href=\"__main__.py#L188\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>cluster_node.scale</code>(**`x_scale`**, **`y_scale`**, **`center_scale`**=*`'center'`*)\n",
+       "\n",
+       "Scale the points in the cluster \n",
+       "\n",
+       ":param x_scale Scale factor to scale in x axis\n",
+       "\n",
+       ":param y_scale Scale factor to scale in y axis\n",
+       "\n",
+       ":param center_scale Scale center point  (Default = 'center')\n",
+       "\n",
+       ":returns: No returns"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "show_doc(cluster_node.scale)"
    ]
@@ -925,13 +943,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"cluster_node.get_density\" class=\"doc_header\"><code>cluster_node.get_density</code><a href=\"__main__.py#L204\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"cluster_node.get_density\" class=\"doc_header\"><code>cluster_node.get_density</code><a href=\"__main__.py#L217\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>cluster_node.get_density</code>()\n",
        "\n",
@@ -953,13 +971,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"cluster_node.tag_low_level_noise_signal\" class=\"doc_header\"><code>cluster_node.tag_low_level_noise_signal</code><a href=\"__main__.py#L316\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"cluster_node.tag_low_level_noise_signal\" class=\"doc_header\"><code>cluster_node.tag_low_level_noise_signal</code><a href=\"__main__.py#L335\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>cluster_node.tag_low_level_noise_signal</code>(**`point_check`**=*`None`*)\n",
        "\n",
@@ -1010,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1049,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1087,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
