--- a/src/00_Node_cluster.ipynb
+++ b/src/00_Node_cluster.ipynb
@@ -791,7 +791,7 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.cluster_node at 0x7ff00a528f50>"
+       "<__main__.cluster_node at 0x7f7d4faccad0>"
       ]
      },
      "execution_count": 7,
