--- a/src/00_Node_cluster.ipynb
+++ b/src/00_Node_cluster.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,6 +100,19 @@
     "                density=None,\n",
     "                parent=None,\n",
     "                children=None):\n",
+    "        \"\"\"\n",
+    "        Constructor of the class\n",
+    "        \n",
+    "        :param str name: Name of the cluster\n",
+    "        \n",
+    "        :param double density: Density of the cluster (Default =None)\n",
+    "        \n",
+    "        :param cluster_node parent: Cluster parent (Default = None)\n",
+    "        \n",
+    "        :param list children: List of its children (Default =None)\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        \n",
     "        super(cluster, self).__init__()\n",
     "        self.name = name\n",
     "        self.parent = parent\n",
@@ -119,6 +132,22 @@
     "                    random_state= 170, \n",
     "                    **kwargs\n",
     "                    ):\n",
+    "        \"\"\"\n",
+    "        Populate the cluster on random bases \n",
+    "        \n",
+    "        :param int random_state: Rando state \n",
+    "        \n",
+    "        :param double min_scale_x: min x value range ( Default=.1 )\n",
+    "        \n",
+    "        :param double max_scale_x: max x value range ( Default=.5 )\n",
+    "        \n",
+    "        :param double min_scale_y: min y value range ( Default=.1 )\n",
+    "        \n",
+    "        :param double max_scale_y: max y value range ( Default=.5 )\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        \n",
+    "        \n",
     "        self.density = density\n",
     "        random.seed(random_state) ## initialize random state \n",
     "        avoid_intersec= kwargs.get('avoid_intersec', False)\n",
@@ -811,6 +840,82 @@
     "### Methods (cluster_node)\n",
     "\n",
     "In the following section the mos important methos of the cluster_node class are review "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Create the cluster and populate\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"cluster_node.__init__\" class=\"doc_header\"><code>cluster_node.__init__</code><a href=\"__main__.py#L3\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>cluster_node.__init__</code>(**`name`**, **`density`**=*`None`*, **`parent`**=*`None`*, **`children`**=*`None`*)\n",
+       "\n",
+       "Constructor of the class\n",
+       "\n",
+       ":param str name: Name of the cluster\n",
+       "\n",
+       ":param double density: Density of the cluster (Default =None)\n",
+       "\n",
+       ":param cluster_node parent: Cluster parent (Default = None)\n",
+       "\n",
+       ":param list children: List of its children (Default =None)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(cluster_node.__init__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"cluster_node.populate_cluster\" class=\"doc_header\"><code>cluster_node.populate_cluster</code><a href=\"__main__.py#L16\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>cluster_node.populate_cluster</code>(**`from_points_num`**=*`20`*, **`density`**=*`None`*, **`num_points`**=*`None`*, **`min_scale_x`**=*`0.1`*, **`max_scale_x`**=*`0.5`*, **`min_scale_y`**=*`0.1`*, **`max_scale_y`**=*`0.5`*, **`random_state`**=*`170`*, **\\*\\*`kwargs`**)\n",
+       "\n",
+       "Populate the cluster on random bases \n",
+       "\n",
+       ":param int random_state: Rando state \n",
+       ":param double min_scale_x: min x value range ( Default=.1 )\n",
+       "\n",
+       ":param double max_scale_x: max x value range ( Default=.5 )\n",
+       "\n",
+       ":param double min_scale_y: min y value range ( Default=.1 )\n",
+       "\n",
+       ":param double max_scale_y: max y value range ( Default=.5 )"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(cluster_node.populate_cluster)"
    ]
   },
   {
