--- a/src/01_tree_clusters.ipynb
+++ b/src/01_tree_clusters.ipynb
@@ -37,12 +37,13 @@
    },
    "source": [
     "# Tree Cluster class \n",
-    "> The class contains all the methods to construct and use the clusters tree structure and visualize it "
+    "\n",
+    "The class for a hierarchical structure (clusters tree) that allows to visualize and create random hierargical geographical points"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "e4a9fca0-a169-416b-a23d-5fb5b96d48b6",
    "metadata": {},
    "outputs": [],
@@ -59,6 +60,19 @@
     "                node_str ='n_',\n",
     "                **kwargs\n",
     "                ):\n",
+    "        \"\"\"\n",
+    "        Build the tree \n",
+    "        \n",
+    "        :param int levels: Number of leevels in the tree (Default =None) \n",
+    "        \n",
+    "        :param str r_name : String to root label (Default= 'Root')\n",
+    "        \n",
+    "        :param str level_str: String to name the levels (Default= 'l_')\n",
+    "        \n",
+    "        :param str node_str: String to name the nodes (Default ='n_')\n",
+    "        \n",
+    "        :param double random_seed:\n",
+    "        \"\"\"\n",
     "        random_seed = kwargs.get('random_seed', 123)\n",
     "        random.seed(random_seed)\n",
     "        if levels is None:\n",
@@ -91,13 +105,20 @@
     "    \n",
     "    def get_level(self, level):\n",
     "        \"\"\"\n",
-    "        returns all the nodes in the level\n",
+    "        :param int level: Level to get nodes\n",
+    "        :returns List: All the nodes in the level\n",
     "        \"\"\"\n",
     "        return self.levels_nodes[level]\n",
     "    \n",
     "    def get_node(self, level_int, node_int):\n",
     "        \"\"\"\n",
-    "        returns all the nodes in the level\n",
+    "        Get the node in level_in at position node_int\n",
+    "        \n",
+    "        :param  int level_int: Level of node\n",
+    "        \n",
+    "        :param int node_int: Position in level\n",
+    "        \n",
+    "        :returns cluster_node: Node \n",
     "        \"\"\"\n",
     "        return self.levels_nodes[level_int][node_int]\n",
     "    ######Populate the structure \n",
@@ -108,6 +129,18 @@
     "                    density_init_list = None, # list of densities by level\n",
     "                    **kwargs\n",
     "                    ):\n",
+    "        \"\"\"\n",
+    "        Populate the tree_cluster structure, populate each node \n",
+    "        inside the tree_clusters using random ranges.\n",
+    "        \n",
+    "        :param int number_per_cluster: Number of point per cluster (Default= None)\n",
+    "        \n",
+    "        :param double density_init: Initial density of the tree (Default= None)\n",
+    "        \n",
+    "        :param double factor_density: Factor to increase density (Default = 3)         \n",
+    "        \n",
+    "        :returns None:\n",
+    "        \"\"\"\n",
     "\n",
     "        for level_id, level in  enumerate(self.levels_nodes):\n",
     "            rand_cluster_state= np.random.randint(0, 1500, len(level)) ## Random ints for random_seed\n",
@@ -137,7 +170,13 @@
     "    ########Get all point in the tree\n",
     "    def get_points_tree(self, level= None, iterative =False):\n",
     "        \"\"\"\n",
-    "        Return  all the point in the tree\n",
+    "        Return all the points in the tree\n",
+    "        \n",
+    "        :param int level: The level to exctract the points (default = None)\n",
+    "        \n",
+    "        :param bool iterative: To exctract iterative (Default =False)\n",
+    "        \n",
+    "        :return Points :\n",
     "        \"\"\"\n",
     "        \n",
     "        if level != None:\n",
@@ -156,7 +195,9 @@
     "            #return self.root.get_points( all_tag = iterative )\n",
     "    ####### visualize the structure \n",
     "    def print_structure(self):\n",
-    "        \"\"\"print the tree structure\n",
+    "        \"\"\"\n",
+    "        Print the tree structure in console\n",
+    "        \n",
     "        \"\"\"\n",
     "        print(self.root.name)\n",
     "        for pre, _, node in RenderTree( self.root ):\n",
@@ -170,6 +211,13 @@
     "                    colors_levels= None,\n",
     "                    **kwargs\n",
     "                    ):\n",
+    "        \"\"\"\n",
+    "        Visualize the tree \n",
+    "        \n",
+    "        :param axs: The ax to plot the figure\n",
+    "        :param str color_map_val: use a matplotlib colormap\n",
+    "        \n",
+    "        \"\"\"\n",
     "        if colors_levels is None:\n",
     "            color_map_val= kwargs.get('color_map_val', 'jet')\n",
     "            colors=  cm.get_cmap(color_map_val, len(self.levels_nodes))\n",
@@ -179,7 +227,7 @@
     "        \n",
     "        for level, level_clusters in enumerate(self.levels_nodes):\n",
     "            for cluster in level_clusters:\n",
-    "                cluster_alpha= kwargs.get('cluster_size', .2)\n",
+    "                cluster_alpha= kwargs.get('cluster_alpha', .2)\n",
     "                cluster.viewer_cluster(\n",
     "                    axs,\n",
     "                    color_cluster= color_map(level),\n",
@@ -243,14 +291,16 @@
     "        return new_tree\n",
     "    \n",
     "    def get_deepth(self):\n",
+    "        \"\"\"\n",
+    "        Returns the deepth of the tree\n",
+    "        \"\"\"\n",
     "        return len(self.levels_nodes)\n",
     "\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
     "    def size(self):\n",
-    "        \"\"\" returns the number of node in the tree\n",
+    "        \"\"\" \n",
+    "        Returns the number of node in the tree\n",
     "        \"\"\"\n",
     "        sum_s=0\n",
     "        for i in self.levels_nodes:\n",
@@ -399,17 +449,311 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ffa14115-319c-4bf4-9fcd-9f74a40b4ef9",
+   "cell_type": "markdown",
+   "id": "39975d0b-0765-41e2-aeb8-ffd5325ed5b4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Methods\n",
+    "The following are the mos important methos inside the `tree_clusters` class"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a47297dd-c146-417a-87c6-c5ede3aee726",
+   "metadata": {},
+   "source": [
+    "### Counstruct tree "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d178d71d-68e9-49c4-b1e6-7c7ce8498ff5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"tree_clusters.__init__\" class=\"doc_header\"><code>tree_clusters.__init__</code><a href=\"__main__.py#L6\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>tree_clusters.__init__</code>(**`levels`**=*`None`*, **`r_name`**=*`'Root'`*, **`level_str`**=*`'l_'`*, **`node_str`**=*`'n_'`*, **\\*\\*`kwargs`**)\n",
+       "\n",
+       "Build the tree \n",
+       "\n",
+       ":param int levels: Number of leevels in the tree (Default =None) \n",
+       "\n",
+       ":param str r_name : String to root label (Default= 'Root')\n",
+       "\n",
+       ":param str level_str: String to name the levels (Default= 'l_')\n",
+       "\n",
+       ":param str node_str: String to name the nodes (Default ='n_')\n",
+       "\n",
+       ":param double random_seed:"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(tree_clusters.__init__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ba832fc5-1c06-49ba-924d-52279ce59526",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"tree_clusters.populate_tree\" class=\"doc_header\"><code>tree_clusters.populate_tree</code><a href=\"__main__.py#L75\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>tree_clusters.populate_tree</code>(**`number_per_cluster`**=*`None`*, **`density_init`**=*`None`*, **`factor_density`**=*`3`*, **`density_init_list`**=*`None`*, **\\*\\*`kwargs`**)\n",
+       "\n",
+       "Populate the tree_cluster structure, populate each node \n",
+       "inside the tree_clusters using random ranges.\n",
+       "\n",
+       ":param int number_per_cluster: Number of point per cluster (Default= None)\n",
+       "\n",
+       ":param double density_init: Initial density of the tree (Default= None)\n",
+       "\n",
+       ":param double factor_density: Factor to increase density (Default = 3)         \n",
+       "\n",
+       ":returns None:"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(tree_clusters.populate_tree)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89d85cdc-a318-4de9-9251-a33f01e0f601",
+   "metadata": {},
+   "source": [
+    "### Tree Values "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "5cbf3ea1-feee-4a9d-9548-4e92173c563c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"tree_clusters.get_deepth\" class=\"doc_header\"><code>tree_clusters.get_deepth</code><a href=\"__main__.py#L234\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>tree_clusters.get_deepth</code>()\n",
+       "\n",
+       "Returns the deepth of the tree"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(tree_clusters.get_deepth)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "239d2e6b-0513-4df7-8ad2-3a84f9c0e127",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"tree_clusters.size\" class=\"doc_header\"><code>tree_clusters.size</code><a href=\"__main__.py#L244\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>tree_clusters.size</code>()\n",
+       "\n",
+       "Returns the number of node in the tree"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(tree_clusters.size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8f12b121-55f9-4eb1-8dbf-8e5001f25159",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"tree_clusters.size_points\" class=\"doc_header\"><code>tree_clusters.size_points</code><a href=\"__main__.py#L253\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>tree_clusters.size_points</code>()\n",
+       "\n",
+       "Returns the number of points in the tree "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(tree_clusters.size_points)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3effa434-f4c8-4b86-8d10-60890fc09df3",
+   "metadata": {},
+   "source": [
+    "### Points "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "84b594d6-322b-4143-a19d-e97c97fadc70",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"tree_clusters.get_points_tree\" class=\"doc_header\"><code>tree_clusters.get_points_tree</code><a href=\"__main__.py#L89\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>tree_clusters.get_points_tree</code>(**`level`**=*`None`*, **`iterative`**=*`False`*)\n",
+       "\n",
+       "Return  all the point in the tree"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(tree_clusters.get_points_tree)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ddd87c84-0acd-4c5c-89b4-85f59e7e77fb",
+   "metadata": {},
+   "source": [
+    "### Visualize\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c8262e18-aca0-4ca6-9f6e-0c520cc83ea3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"tree_clusters.print_structure\" class=\"doc_header\"><code>tree_clusters.print_structure</code><a href=\"__main__.py#L147\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>tree_clusters.print_structure</code>()\n",
+       "\n",
+       "print the tree structure\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(tree_clusters.print_structure)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9acb46b4-a254-4b1c-86f0-488dab8c72e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"tree_clusters.visualize\" class=\"doc_header\"><code>tree_clusters.visualize</code><a href=\"__main__.py#L157\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>tree_clusters.visualize</code>(**`axs`**, **`colors_levels`**=*`None`*, **\\*\\*`kwargs`**)\n",
+       "\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(tree_clusters.visualize)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "3b6acd5d-ee6d-4ae9-a6ce-c002a9471fbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"tree_clusters.visualize_levels\" class=\"doc_header\"><code>tree_clusters.visualize_levels</code><a href=\"__main__.py#L179\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>tree_clusters.visualize_levels</code>(**`axs`**, **\\*\\*`kwargs`**)\n",
+       "\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(tree_clusters.visualize_levels)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd7cf9e7-77cc-4877-963b-09ac11d303e0",
+   "id": "5322caa7-c6bf-4c01-830f-997ed30efbce",
    "metadata": {},
    "outputs": [],
    "source": []
