--- a/src/01_tree_clusters.ipynb
+++ b/src/01_tree_clusters.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "e4a9fca0-a169-416b-a23d-5fb5b96d48b6",
    "metadata": {},
    "outputs": [],
@@ -215,8 +215,8 @@
     "        Visualize the tree \n",
     "        \n",
     "        :param axs: The ax to plot the figure\n",
-    "        :param str color_map_val: use a matplotlib colormap\n",
     "        \n",
+    "        :param str color_map_val: use a matplotlib colormap\n",
     "        \"\"\"\n",
     "        if colors_levels is None:\n",
     "            color_map_val= kwargs.get('color_map_val', 'jet')\n",
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "d178d71d-68e9-49c4-b1e6-7c7ce8498ff5",
    "metadata": {},
    "outputs": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "ba832fc5-1c06-49ba-924d-52279ce59526",
    "metadata": {},
    "outputs": [
@@ -548,14 +548,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "5cbf3ea1-feee-4a9d-9548-4e92173c563c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"tree_clusters.get_deepth\" class=\"doc_header\"><code>tree_clusters.get_deepth</code><a href=\"__main__.py#L234\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"tree_clusters.get_deepth\" class=\"doc_header\"><code>tree_clusters.get_deepth</code><a href=\"__main__.py#L243\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>tree_clusters.get_deepth</code>()\n",
        "\n",
@@ -575,14 +575,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "239d2e6b-0513-4df7-8ad2-3a84f9c0e127",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"tree_clusters.size\" class=\"doc_header\"><code>tree_clusters.size</code><a href=\"__main__.py#L244\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"tree_clusters.size\" class=\"doc_header\"><code>tree_clusters.size</code><a href=\"__main__.py#L251\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>tree_clusters.size</code>()\n",
        "\n",
@@ -602,14 +602,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "8f12b121-55f9-4eb1-8dbf-8e5001f25159",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"tree_clusters.size_points\" class=\"doc_header\"><code>tree_clusters.size_points</code><a href=\"__main__.py#L253\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"tree_clusters.size_points\" class=\"doc_header\"><code>tree_clusters.size_points</code><a href=\"__main__.py#L260\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>tree_clusters.size_points</code>()\n",
        "\n",
@@ -637,18 +637,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "84b594d6-322b-4143-a19d-e97c97fadc70",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"tree_clusters.get_points_tree\" class=\"doc_header\"><code>tree_clusters.get_points_tree</code><a href=\"__main__.py#L89\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"tree_clusters.get_points_tree\" class=\"doc_header\"><code>tree_clusters.get_points_tree</code><a href=\"__main__.py#L121\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>tree_clusters.get_points_tree</code>(**`level`**=*`None`*, **`iterative`**=*`False`*)\n",
        "\n",
-       "Return  all the point in the tree"
+       "Return all the points in the tree\n",
+       "\n",
+       ":param int level: The level to exctract the points (default = None)\n",
+       "\n",
+       ":param bool iterative: To exctract iterative (Default =False)\n",
+       "\n",
+       ":return Points :"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -672,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "c8262e18-aca0-4ca6-9f6e-0c520cc83ea3",
    "metadata": {},
    "outputs": [
@@ -683,8 +689,7 @@
        "\n",
        "> <code>tree_clusters.print_structure</code>()\n",
        "\n",
-       "print the tree structure\n",
-       "        "
+       "Print the tree structure in console"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -700,17 +705,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "9acb46b4-a254-4b1c-86f0-488dab8c72e0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"tree_clusters.visualize\" class=\"doc_header\"><code>tree_clusters.visualize</code><a href=\"__main__.py#L157\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"tree_clusters.visualize\" class=\"doc_header\"><code>tree_clusters.visualize</code><a href=\"__main__.py#L159\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>tree_clusters.visualize</code>(**`axs`**, **`colors_levels`**=*`None`*, **\\*\\*`kwargs`**)\n",
-       "\n"
+       "\n",
+       "Visualize the tree \n",
+       "\n",
+       ":param axs: The ax to plot the figure\n",
+       ":param str color_map_val: use a matplotlib colormap"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -726,14 +735,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "3b6acd5d-ee6d-4ae9-a6ce-c002a9471fbb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"tree_clusters.visualize_levels\" class=\"doc_header\"><code>tree_clusters.visualize_levels</code><a href=\"__main__.py#L179\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"tree_clusters.visualize_levels\" class=\"doc_header\"><code>tree_clusters.visualize_levels</code><a href=\"__main__.py#L188\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>tree_clusters.visualize_levels</code>(**`axs`**, **\\*\\*`kwargs`**)\n",
        "\n"
