--- a/src/02_Clustering.ipynb
+++ b/src/02_Clustering.ipynb
@@ -45,16 +45,9 @@
    "source": [
     "# Clustering \n",
     "\n",
-    "In this file all the clustering methods are implemented \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "215b9b2a-9ced-4043-87bd-950235e99ed6",
-   "metadata": {},
-   "source": [
-    "## Compute DBSCAN\n",
-    "A wapper function to obtain the DBSCAN cluters by levels"
+    "In this module all the clustering methods wrap or implemented (Natural cities DBSCAN, OPTICS, HDBSCAN, auto_DBSCAN) all with the intention to have the same input and output. \n",
+    "\n",
+    "A recursive function is implemented to obtain the cluster iterative using the output as the new input. To select the method to use only a string is needed.\n"
    ]
   },
   {
@@ -72,6 +65,7 @@
     "            **kwargs\n",
     "    ):\n",
     "    \"\"\"Function to get the clusters for single group by\n",
+    "    \n",
     "    :param t_next_level_2 Dictionary with the points to compute the\n",
     "            cluster\n",
     "    :param level:  None Level to compute (Default None)\n",
@@ -391,6 +385,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "215b9b2a-9ced-4043-87bd-950235e99ed6",
+   "metadata": {},
+   "source": [
+    "## Compute DBSCAN\n",
+    "A wapper function to obtain the DBSCAN cluters by levels"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "3646c9cf-05c5-4d02-a3db-030b3834ba66",
@@ -630,7 +633,9 @@
     "#export\n",
     "def compute_hdbscan(points2_clusters,  **kwargs):\n",
     "    \n",
-    "    \"\"\" HDBSCAN wrapper.\n",
+    "    \"\"\"\n",
+    "    HDBSCAN wrapper.\n",
+    "    \n",
     "    :param np.array cluster: a (N,2) numpy array containing the obsevations\n",
     "    \n",
     "    :returns:  list with numpy arrays for all the clusters obtained\n",
