--- a/src/00_TreeClusters.ipynb
+++ b/src/00_TreeClusters.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# default_exp Node_cluster"
+    "# default_exp TreeClusters"
    ]
   },
   {
@@ -821,7 +821,7 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.NodeCluster at 0x7ff7b9242c10>"
+       "<__main__.NodeCluster at 0x7f8beb2cc390>"
       ]
      },
      "execution_count": 7,
