--- a/src/01_Clustering.ipynb
+++ b/src/01_Clustering.ipynb
@@ -35,7 +35,7 @@
     "module_path = os.path.abspath(os.path.join('..'))\n",
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
-    "from HierarchicalGeoClustering.Tree_clusters import cluster_node"
+    "from HierarchicalGeoClustering.TreeClusters import tree_clusters"
    ]
   },
   {
